fix(Route): clean the DOM on location selector (instead of hiding in overflow)

--- a/src/packages/CSS/Controls/Route/GPFroute.css
+++ b/src/packages/CSS/Controls/Route/GPFroute.css
@@ -95,6 +95,9 @@ div[id^=GProuteStageAdd] {
 .GProuteFormMini button[id^=GPshowRouteExclusionsPicto],
 .GProuteFormMini .GProuteStageRemove,
 .GProuteFormMini div[id^=GProuteStageAdd],
+.GProuteFormMini > *:not(.selected),
+.GProuteFormMini div[id^="GProuteModeChoice"],
+.GProuteFormMini button[id^="GPshowRouteExclusions"][aria-pressed="true"] + div[id^="GProuteExclusions"],
 .GProuteFormMini .GPpanelFooter {
   display: none;
 }
